add articles API
