# src/routes/v1/index.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
 const users = require('./users');
+const articles = require('./articles');
 const product = require('./product');
 const passport = require('passport');
 
@@ -9,5 +10,6 @@ const auth = passport.authenticate('jwt', {
 
 router.use('/users', users);
 router.use('/product', product);
+router.use('/articles', articles);
 
 module.exports = router;
